--- a/src/css/common.css
+++ b/src/css/common.css
@@ -13,3 +13,16 @@
     flex-direction: row-reverse;
     justify-content: space-between;
 }
+.warn {
+    color: #ff4057;
+}
+
+.validation-text {
+    color: #ff4057;
+    margin-top: -0.5rem;
+    margin-bottom: 0.5rem;
+    font-size: 1rem;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+}
